fix(footer): remove horizontal scrollbar on smaller mobile viewport sizes

--- a/app/assets/stylesheets/footer.sass
+++ b/app/assets/stylesheets/footer.sass
@@ -7,13 +7,15 @@
 
   .inner
     ul
-      list-style: outside none
-      margin: 0px
-      padding: 0px
+      list-style: none
+      margin: 0
+      padding: 0
     li
       padding-right: 50px
       display: inline-flex
       vertical-align: middle
+      &:last-child
+        padding-right: 0
     img
       max-width: 35px
 
